# mysol

./: .gitignore  README.md  lib.rs  mysol.html
mysol_program/: .gitignore  Anchor.toml  Cargo.toml
mysol_program/programs/mysol_program/: Cargo.toml
mysol_program/programs/mysol_program/src/: lib.rs
mysol_program/tests/: mysol_program.ts
