[package]
name = "mysol_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mysol_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
devnet-reset = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl  = { version = "0.32.1", features = ["token", "token_2022"] }
